--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^12.1.5",
     "nookies": "^2.5.2",
     "react": "17.0.2",
+    "react-datepicker": "^4.23.0",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-firebaseui": "^5.0.2",
