--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@next/eslint-plugin-next": "^12.1.5",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
+    "@types/react-datepicker": "^4.19.3",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "autoprefixer": "^10.4.4",
